--- a/index.html
+++ b/index.html
@@ -125,7 +125,8 @@ https://templatemo.com/tm-530-mini-profile
                   </span>
                 </h3>
                 <p class="mb-0">
-                  This section will be for every one of the Otaku Person like myself. I will make this section the most user-freindly one as much as I can.
+                  This section will be for every one of the <a href="https://github.com/meDotCuriouZ/Home/blob/main/FortuneTurnnerNissan.html">Otaku</a>
+                  Person like myself. I will make this section the most user-freindly one as much as I can.
                 </p>
               </div>
             </div>
