--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@ https://templatemo.com/tm-530-mini-profile
                   Person like myself. I will make this section the most user-freindly one as much as I can.
                   <p>
                     <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=gokumehta0007-21&language=en_IN&marketplace=amazon&region=IN&placement=B08243BDWM&asins=B08243BDWM&linkId=7aaabde49fea2c2a458122c7b0ff3553&show_border=true&link_opens_in_new_window=true"></iframe>
+                    <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=gokumehta0007-21&language=en_IN&marketplace=amazon&region=IN&placement=B07RYMX1WS&asins=B07RYMX1WS&linkId=b203a5cd5db945b4f70d1d9302d32178&show_border=true&link_opens_in_new_window=true"></iframe>
                   </p>
                 </p>
               </div>
